Updated the Readme, took screenshots.